# benchmarking

./: .gitignore  Cargo.toml  README.md  sync-docs.pl
.github/workflows/: ci-version.yml  ci.yml
examples/: fill_a_number.rs  fill_a_number_for_loop.rs  fill_a_number_while_loop.rs  fill_numbers_0_to_99.rs  read_a_number.rs  read_and_write.rs
src/: lib.rs  measure_result.rs  measurer.rs
