[package]
name = "benchmarking"
version = "0.4.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
homepage = "https://magiclen.org/benchmarking"
keywords = ["benchmark", "bench", "execution", "time"]
description= "This crate can be used to execute something and measure the execution time. It does not output anything to screens and filesystems."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/benchmarking"
branch = "master"

[dependencies]