[package]
name = "benchmarking"
version = "0.4.12"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/benchmarking"
homepage = "https://magiclen.org/benchmarking"
keywords = ["benchmark", "bench", "execution", "time"]
categories = ["development-tools::profiling"]
description = "This crate can be used to execute something and measure the execution time. It does not output anything to screens and filesystems."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
